Fixed overlapping issue with navbar

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,4 @@
-.navbar-nav {
-  position: relative;
+.navbar-nav {  
   margin: 0 auto;
 }
 
